hw2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-crud-mongo-service
spec:
  selector:
    app: simple-crud-mongo-label
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
