hw2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-crud-mongo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: "arch.homework"
      http:
        paths:
          - path: /otusapp/\w+/(.+)
            pathType: Prefix
            backend:
              service:
                name: simple-crud-mongo-service
                port:
                  number: 8080
